--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,16 +17,10 @@
         android:theme="@style/Theme.Pikachu"
         tools:targetApi="31">
         <activity
+            android:name=".flipbook1"
+            android:exported="false" />
+        <activity
             android:name=".parapharase"
-            android:exported="false" />
-        <activity
-            android:name=".testgal"
-            android:exported="false" />
-        <activity
-            android:name=".PDFViewerActivity"
-            android:exported="false" />
-        <activity
-            android:name=".NewBook"
             android:exported="false" />
         <activity
             android:name=".NextLevel3"
